# flet-carousel-slider

./: LICENSE  README.md  pyproject.toml
src/flet_carousel_slider/: __init__.py  flet_carousel_slider.py
src/flet_carousel_slider.egg-info/: PKG-INFO
src/flutter/flet_carousel_slider/: README.md  pubspec.yaml
src/flutter/flet_carousel_slider/lib/: flet_carousel_slider.dart
src/flutter/flet_carousel_slider/lib/src/: create_control.dart  flet_carousel_slider.dart
